package helron.foundationwizard.com.ui;

public enum FormType {
    CLASS,LIST
}
