@startuml

title __UI's Class Diagram__\n

  namespace  {
    namespace elron.foundationwizard.com {
      namespace ui {
        class helron.foundationwizard.com.ui.FormCLass {
            {static} + DIM : Dimension
            + inputs : LinkedHashMap<String, String>
            # id : String
            ~ body : JPanel
            ~ dataList : DefaultListModel<String>
            ~ leftPanel : JPanel
            - addButtons : List<PlusButton>
            {static} - gb : GridBagLayout
            {static} - gbc : GridBagConstraints
            - validateButton : JButton
            + FormCLass()
            + addComponentToColumnX()
            + addValidateButton()
            + buildField()
            + buildFormRow()
            + getAddButtons()
            + getData()
            + getId()
            + getInputs()
            + getValidateButton()
            + setId()
            + setInputs()
            + setValidateButton()
            - addDatatypeField()
            - buildEachRows()
            - init()
            - initBody()
            - initLeftPanel()
        }
      }
    }
  }
  

  namespace  {
    namespace elron.foundationwizard.com {
      namespace ui {
        enum FormType {
          CLASS
          LIST
        }
      }
    }
  }
  

  namespace  {
    namespace elron.foundationwizard.com {
      namespace ui {
        class helron.foundationwizard.com.ui.FormsContainer {
            {static} + dim : Dimension
            ~ formCLassLinkedList : LinkedList<FormCLass>
            + FormsContainer()
            + init()
            - addPanel()
            - addValidateButton()
        }
      }
    }
  }
  

  namespace  {
    namespace elron.foundationwizard.com {
      namespace ui {
        class helron.foundationwizard.com.ui.Home {
            + Home()
        }
      }
    }
  }
  

  helron.foundationwizard.com.ui.FormCLass -up-|> javax.swing.JPanel
  helron.foundationwizard.com.ui.FormCLass o-- helron.foundationwizard.com.datagenerator.DataStructure : dataStructure
  helron.foundationwizard.com.ui.FormsContainer -up-|> javax.swing.JTabbedPane
  helron.foundationwizard.com.ui.FormsContainer o-- helron.foundationwizard.com.datagenerator.DataStructureMap : dataStructureMap
  helron.foundationwizard.com.ui.Home -up-|> javax.swing.JPanel
  helron.foundationwizard.com.ui.Home o-- helron.foundationwizard.com.datagenerator.DataStructureMap : dataStructureMap
  helron.foundationwizard.com.ui.Home o-- helron.foundationwizard.com.ui.FormsContainer : formsContainer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
